--- a/AppFilmesTA/src/app/view/movies/movies.page.html
+++ b/AppFilmesTA/src/app/view/movies/movies.page.html
@@ -1,13 +1,44 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>movies</ion-title>
-  </ion-toolbar>
-</ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">movies</ion-title>
+<ion-header>
+    <ion-toolbar color="primary">
+      <ion-title>Busca Filmes</ion-title>
     </ion-toolbar>
   </ion-header>
-</ion-content>
+   
+  <ion-content>
+   
+    <ion-searchbar [(ngModel)]="searchTerms" (ionChange)="search()"></ion-searchbar>
+   
+    <ion-item>
+      <ion-label>Seleciona Tipo</ion-label>
+      <ion-select [(ngModel)]="type" (ionChange)="search()">
+        <ion-select-option value="">Tudo</ion-select-option>
+        <ion-select-option value="movie">Filmes</ion-select-option>
+        <ion-select-option value="series">Séries</ion-select-option>
+        <ion-select-option value="episode">Episódios</ion-select-option>
+        <ion-select-option value="game">Jogos</ion-select-option>
+      </ion-select>
+    </ion-item>
+   
+    <ion-list>
+   
+      <ion-item button *ngFor="let item of (result | async)" [routerLink]="['/', 'movie-details', item.imdbID]">
+        <ion-avatar slot="start">
+          <img [src]="item.Poster" *ngIf="item.Poster != 'N/A'">
+        </ion-avatar>
+   
+        <ion-label text-wrap>
+          <h3>{{ item.Title }}</h3>
+          {{ item.Year }}
+        </ion-label>
+   
+        <ion-icon slot="end" *ngIf="item.Type == 'movie'" name="videocam"></ion-icon>
+        <ion-icon slot="end" *ngIf="item.Type == 'series'" name="tv"></ion-icon>
+        <ion-icon slot="end" *ngIf="item.Type == 'game'" name="game-controller-outline"></ion-icon>
+        <ion-icon slot="end" *ngIf="item.Type == 'episode'" name="logo-game-controller-b"></ion-icon>
+   
+      </ion-item>
+   
+    </ion-list>
+   
+  </ion-content>
+  
