--- a/contatos-TA/src/app/view/usuarios/signin/signin.page.html
+++ b/contatos-TA/src/app/view/usuarios/signin/signin.page.html
@@ -11,11 +11,15 @@
       <ion-input type="email" formControlName="email"></ion-input>
     </ion-item>
     <!--Mensagens erro email-->
+    <span *ngIf="formLogar.get('email')?.touched && formLogar.get('email')?.errors?.['required']">Email é obritatório</span><br/>
+    <span *ngIf="formLogar.get('email')?.dirty && formLogar.get('email')?.errors?.['email']">Formato de email inválido</span>
     <ion-item>
       <ion-label position="floating">Senha</ion-label>
       <ion-input type="password" formControlName="senha"></ion-input>
     </ion-item>
     <!--Mensagens erro senha-->
+    <span *ngIf="formLogar.get('senha')?.touched && formLogar.get('senha')?.errors?.['required']">Senha é obritatória</span><br/>
+    <span *ngIf="formLogar.get('senha')?.dirty && formLogar.get('senha')?.errors?.['minlength']">Senha precisa ter no mínimo 6 digitos</span>
     <ion-button expand="full" color="success" type="submit" shape="round">Entrar</ion-button>
     <ion-button expand="full" color="danger" shape="round" (click)="logarComGoogle()">Entrar com Google
       <ion-icon slot="end" name="logo-google"></ion-icon>
