--- a/contatos-TA/src/app/view/usuarios/signup/signup.page.html
+++ b/contatos-TA/src/app/view/usuarios/signup/signup.page.html
@@ -1,13 +1,35 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>signup</ion-title>
+    <ion-title>Logar</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">signup</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <form [formGroup]="formCadastrar" (ngSubmit)="submitForm()">
+    <ion-item>
+      <ion-label position="floating">Email</ion-label>
+      <ion-input type="email" formControlName="email"></ion-input>
+    </ion-item>
+    <!--Mensagens erro email-->
+    <span *ngIf="formCadastrar.get('email')?.touched && formCadastrar.get('email')?.errors?.['required']">Email é obritatório</span><br/>
+    <span *ngIf="formCadastrar.get('email')?.dirty && formCadastrar.get('email')?.errors?.['email']">Formato de email inválido</span>
+    <ion-item>
+      <ion-label position="floating">Senha</ion-label>
+      <ion-input type="password" formControlName="senha"></ion-input>
+    </ion-item>
+    <!--Mensagens erro senha-->
+    <span *ngIf="formCadastrar.get('senha')?.touched && formCadastrar.get('senha')?.errors?.['required']">Senha é obritatória</span><br/>
+    <span *ngIf="formCadastrar.get('senha')?.dirty && formCadastrar.get('senha')?.errors?.['minlength']">Senha precisa ter no mínimo 6 digitos</span>
+    <ion-item>
+      <ion-label position="floating">Confirmação de Senha</ion-label>
+      <ion-input type="password" formControlName="confSenha"></ion-input>
+    </ion-item>
+    <!--Mensagens erro confirmação de senha-->
+    <span *ngIf="formCadastrar.get('confSenha')?.touched && formCadastrar.get('confSenha')?.errors?.['required']">A confirmção de senha é obritatória</span><br/>
+    <span *ngIf="formCadastrar.get('confSenha')?.dirty && formCadastrar.get('confSenha')?.errors?.['minlength']">A confirmção de senha é obritatória</span><br/>
+    <span *ngIf="formCadastrar.get('confSenha')?.dirty && (this.formCadastrar.get('senha')?.value != this.formCadastrar.get('confSenha')?.value)">As senhas precisam ser iguais</span>
+    <ion-button expand="full" color="success" type="submit" shape="round">Cadastrar</ion-button>
+
+  </form>
 </ion-content>
+
