login com google

--- a/contatos-TA/src/app/view/contatos/home/home.page.html
+++ b/contatos-TA/src/app/view/contatos/home/home.page.html
@@ -8,6 +8,7 @@
 
 <ion-content>
 
+  <ion-button (click)="logout()">SAIR</ion-button>
   <ion-list *ngFor="let contato of lista_contatos">
     <ion-item (click)="editar(contato)">
       <ion-avatar *ngIf="contato.downloadURL != null">
